--- a/Word Garden/Base.lproj/Main.storyboard
+++ b/Word Garden/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,100 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Word_Garden" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="How Many Guesses To Uncover The Hidden Word?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kWo-VG-Acj">
+                                <rect key="frame" x="13" y="63" width="389" height="106"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="106" id="Mca-5C-Rbq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_ _ _ _ _" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CaF-Ya-68K">
+                                <rect key="frame" x="26" y="186" width="484" height="39"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="You've Made 0 Guesses" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OLO-me-OXy">
+                                <rect key="frame" x="13" y="288" width="381" height="115"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="115" id="1pE-pM-mWL"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PwJ-vS-Dkh">
+                                <rect key="frame" x="20" y="411" width="374" height="30"/>
+                                <state key="normal" title="Play Again"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="Vvo-Id-Onw">
+                                <rect key="frame" x="113.5" y="250" width="187" height="30"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SwA-gs-BPb">
+                                        <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="VC5-6Z-7io"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="yjT-TZ-SQb"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dM3-bD-vp8">
+                                        <rect key="frame" x="42" y="0.0" width="145" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="145" id="MY2-HN-yAK"/>
+                                        </constraints>
+                                        <state key="normal" title="Guess This Letter"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="flower8" translatesAutoresizingMaskIntoConstraints="NO" id="aPA-57-k8Y">
+                                <rect key="frame" x="90" y="449" width="234" height="311"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="311" id="Hv7-LT-Qv0"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="CaF-Ya-68K" firstAttribute="top" secondItem="kWo-VG-Acj" secondAttribute="bottom" constant="17" id="1ex-Uw-wVz"/>
+                            <constraint firstItem="dM3-bD-vp8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="206" id="39b-vt-Yb4"/>
+                            <constraint firstItem="OLO-me-OXy" firstAttribute="top" secondItem="Vvo-Id-Onw" secondAttribute="bottom" constant="5" id="65c-AL-MKk"/>
+                            <constraint firstItem="PwJ-vS-Dkh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="7v6-nQ-aIV"/>
+                            <constraint firstItem="OLO-me-OXy" firstAttribute="trailing" secondItem="CaF-Ya-68K" secondAttribute="trailing" id="GLS-ZL-1ui"/>
+                            <constraint firstItem="aPA-57-k8Y" firstAttribute="top" secondItem="PwJ-vS-Dkh" secondAttribute="bottom" constant="30" id="GLt-dx-mLS"/>
+                            <constraint firstItem="kWo-VG-Acj" firstAttribute="centerX" secondItem="CaF-Ya-68K" secondAttribute="centerX" id="Hle-Yn-hkH"/>
+                            <constraint firstItem="OLO-me-OXy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="13" id="P26-sj-wek"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aPA-57-k8Y" secondAttribute="trailing" constant="90" id="PNF-9b-eRo"/>
+                            <constraint firstItem="kWo-VG-Acj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Tte-Y0-FaQ"/>
+                            <constraint firstItem="Vvo-Id-Onw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VdZ-Gi-8xE"/>
+                            <constraint firstItem="kWo-VG-Acj" firstAttribute="centerX" secondItem="PwJ-vS-Dkh" secondAttribute="centerX" id="YGN-Dd-8Rg"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PwJ-vS-Dkh" secondAttribute="trailing" constant="20" id="YgJ-01-omX"/>
+                            <constraint firstItem="Vvo-Id-Onw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="206" id="aGn-gh-oDR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="aPA-57-k8Y" secondAttribute="bottom" constant="30" id="jUy-3s-nVe"/>
+                            <constraint firstItem="kWo-VG-Acj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="19" id="tTH-vv-uze"/>
+                            <constraint firstItem="OLO-me-OXy" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="vwD-UN-Ua5"/>
+                            <constraint firstItem="aPA-57-k8Y" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="90" id="wER-LP-C1e"/>
+                            <constraint firstItem="OLO-me-OXy" firstAttribute="leading" secondItem="kWo-VG-Acj" secondAttribute="leading" id="yFq-8L-zGB"/>
+                            <constraint firstItem="Vvo-Id-Onw" firstAttribute="top" secondItem="CaF-Ya-68K" secondAttribute="bottom" constant="25" id="zgg-zd-u6V"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="115.84821428571428"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="flower8" width="221" height="398"/>
+    </resources>
 </document>
